# easyok

./: ,env.new  .env copy.example  .env.backup.20251228_231150  .env.backup.20251229_015529  .env.ci  .env.example  .env.example.old  .env.example.v2  .env.local.example  .env.production  .env.schema  .gitignore  AGENTS.md  AUDIT_INDEX.md  AskResponse_NDJSON_Schema.md  CAL_Acceptance_Checklist.md  E2E_GOVERNANCE_AUDIT_FINAL.md  ERROR_DISPLAY_INTEGRATION.md  ESHA_PHASE1_INVENTORY.md  ESHA_PHASE2_EXECUTION_REPORT.md  ESHA_PHASE2_FINAL_SUMMARY.md  EasyData-Env-Contract-v16.7.md  FRONTEND_GOVERNANCE_EXECUTION_SPEC.md  FRONTEND_HANDOFF.md  GOVERNANCE_AUDIT_FINAL_STATUS.md  GOVERNANCE_AUDIT_SUMMARY.md  GOVERNANCE_LOCK_IMPLEMENTATION_SUMMARY.md  Operational_Verification_Checklist.md  Quick_Guide.md  README.md  README_GOVERNANCE_AUDIT.md  README_ol.md  SYSTEM_INTEGRITY_GOVERNANCE_DIRECTIVE.md  TIER2_IMPLEMENTATION_PLAN.md  Training_Item_Taxonomy.md  VisualizationSpec.md  add_missed.md  audit_checklist.md  check_governance.sh  configure_env.old.py  (+63 more)
.github/: CODEOWNERS  dependabot.yml
.temp.github/: dependabot.yml
2f183a4e64493af3/: query_results_0654d740.csv  query_results_2cdad370.csv  query_results_404d9a94.csv  query_results_4d815039.csv  query_results_4e40b080.csv  query_results_6e5b270c.csv  query_results_789bf186.csv
app/: main.py  telemetry.py
archive/: ARCHIVE_INDEX.md
data/: logs.db
docs/: FORTRESS_GOVERNANCE_MASTER_PLAN.md  FORTRESS_READY_CODE_IMPLEMENTATIONS.md  FRONTEND_HANDOFF.md  README.md  (+11 more)
flake8_easydata_arch/: README.md  checker.py  pyproject.toml
(+453 files in other folders)
